<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.bmidetails.BmiDetailsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="50dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_top_to_bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:alpha="0.3"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.3"
                android:gravity="center"
                android:text="@string/body_mass_index"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:alpha="0.3"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/numberBeforeDot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|bottom"
                    android:maxLength="3"
                    android:text="@string/_18"
                    android:textColor="@color/white"
                    android:textSize="100sp" />

                <TextView
                    android:id="@+id/numberAfterDot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1.5"
                    android:gravity="start|bottom"
                    android:maxLength="3"
                    android:text="@string/_61"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/hello_username_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/hello_olivia_you_are_normal"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:alpha="0.8"
                android:gravity="center"
                android:text="@string/normal_bmi_range_18_5kg_m2_25kg_m2"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:gravity="center"
                android:text="@string/ponderal_index_10_64kg_m3"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/shareBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:drawableStart="@drawable/share_icon"
                    android:drawablePadding="10dp"
                    android:gravity="start|center_vertical"
                    android:padding="15dp"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:drawableStart="@drawable/rate_icon"
                    android:drawablePadding="10dp"
                    android:gravity="start|center_vertical"
                    android:padding="15dp"
                    android:text="@string/rate"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>